[project]
name = "comfyui-siliconflow-api-2lab"
description = "Unofficial implementation of siliconflow API for ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/AI2lab/comfyUI-siliconflow-api-2lab"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ai2lab"
DisplayName = "comfyUI-siliconflow-api-2lab"
Icon = ""
